--- a/modules/endorsement_party_health_fr/locale/fr.po
+++ b/modules/endorsement_party_health_fr/locale/fr.po
@@ -9,7 +9,7 @@ msgid ""
 "instead"
 msgstr ""
 "Le tiers %(full_name)s est ayant droit. Vous ne pouvez changer son "
-"complément santé, veuillez changer le complément santé de l'assuré social."
+"Régime Obligatoire Santé, veuillez changer le Régime Obligatoire Santé de l'assuré social."
 
 msgctxt "error:endorsement.party.health_complement:"
 msgid "New version"
@@ -34,7 +34,7 @@ msgstr "Informations santé"
 msgctxt ""
 "field:endorsement.party.change_health_complement,current_health_complement:"
 msgid "Current Health Complement"
-msgstr "Complément santé actuel"
+msgstr "Régime Obligatoire Santé actuel"
 
 msgctxt "field:endorsement.party.change_health_complement,effective_date:"
 msgid "Effective Date"
@@ -92,7 +92,7 @@ msgstr "Clé fonctionnelle"
 
 msgctxt "field:endorsement.party.health_complement,health_complement:"
 msgid "Health Complement"
-msgstr "Complément Santé"
+msgstr "Régime Obligatoire Santé"
 
 msgctxt "field:endorsement.party.health_complement,id:"
 msgid "ID"
@@ -204,7 +204,7 @@ msgstr "Mise à jour"
 
 msgctxt "view:endorsement.party.change_health_complement:"
 msgid "Change Party Health Complement"
-msgstr "Changement de Complément Santé"
+msgstr "Changement de Régime Obligatoire Santé"
 
 msgctxt ""
 "wizard_button:endorsement.start,change_health_complement,change_health_complement_next:"
