--- a/modules/endorsement_party/locale/fr.po
+++ b/modules/endorsement_party/locale/fr.po
@@ -55,14 +55,6 @@ msgctxt "field:endorsement,party_endorsements:"
 msgid "Party Endorsements"
 msgstr "Avenants sur tiers"
 
-msgctxt "field:endorsement.ask_next_endorsement.choice,contracts:"
-msgid "Contracts"
-msgstr "Contrats"
-
-msgctxt "field:endorsement.ask_next_endorsement.choice,possible_contracts:"
-msgid "Possible Contracts"
-msgstr "Contrats disponibles"
-
 msgctxt "field:endorsement.definition,is_party:"
 msgid "Is Party"
 msgstr "Est un avenant de type tiers"
@@ -436,6 +428,10 @@ msgctxt "field:endorsement.party.change_relation_displayer,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
+msgctxt "field:endorsement.party.change_relation_displayer,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
 msgctxt "field:endorsement.party.change_relation_displayer,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
@@ -740,6 +736,14 @@ msgstr "Changement de nom d'un tiers"
 msgctxt "model:endorsement.definition,name:modify_party_address_definition"
 msgid "Change Party Address"
 msgstr "Changement d'adresse"
+
+msgctxt "model:endorsement.definition,name:modify_ssn_party_definition"
+msgid "Change Party Social Security Number"
+msgstr "Modifier le numéro de sécurité sociale du tiers"
+
+msgctxt "model:endorsement.part,name:endorsement_part_change_party_ssn"
+msgid "Change Social Security Number"
+msgstr "Modifier le numéro de sécurité sociale"
 
 msgctxt "model:endorsement.part,name:endorsement_part_party_change_address"
 msgid "Change Party Address"
