coog_core: fix some json export / import issues (#2872)
Fix #0000

--- a/modules/third_party_right_management/locale/fr.po
+++ b/modules/third_party_right_management/locale/fr.po
@@ -10,6 +10,10 @@ msgctxt "error:third_party_manager.protocol:"
 msgid "The code must be unique"
 msgstr "Le code doit être unique"
 
+msgctxt "error:third_party_manager.protocol:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
 msgctxt "field:contract.option,third_party_periods:"
 msgid "Third Party Periods"
 msgstr "Périodes de délégation"
@@ -296,6 +300,20 @@ msgctxt "field:third_party_manager_protocol-endorsement_part,xml_id:"
 msgid "XML Id"
 msgstr "XML Id"
 
+msgctxt "help:third_party_manager.protocol,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"Le code qui sera utilisé pour identifier cet enregistrement de manière "
+"unique dans la base. Il ne doit pas être modifié sans s'être assuré de son "
+"utilisation."
+
+msgctxt "help:third_party_manager.protocol,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
 msgctxt "model:contract.option.third_party_period,name:"
 msgid "Third Party Period"
 msgstr "Période de délégation"
@@ -311,6 +329,10 @@ msgstr "Périodes de délégation"
 msgctxt "model:ir.action,name:wizard_recompute_period"
 msgid "Recompute Period"
 msgstr "Re-calcul des périodes"
+
+msgctxt "model:ir.ui.menu,name:menu_configuration"
+msgid "Configuration"
+msgstr "Configuration"
 
 msgctxt "model:ir.ui.menu,name:menu_third_party_manager_protocol_form"
 msgid "Protocols"
@@ -351,6 +373,10 @@ msgstr "Validé"
 msgctxt "selection:contract.option.third_party_period,status:"
 msgid "Waiting"
 msgstr "En attente"
+
+msgctxt "selection:rule_engine,type_:"
+msgid "Third Party Management"
+msgstr "Gestion des Délégataires"
 
 msgctxt "wizard_button:third_party_manager.recompute_period,ask_date,end:"
 msgid "Cancel"
