rule_engine: add warning should automatically create unique warning name per rule engine (#2688)
* rule_engine: _re_add_warning should automatically create a unique warning name per rule engine execution

--- a/modules/rule_engine/doc/en/CHANGELOG
+++ b/modules/rule_engine/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10976 Make add warning in rule engine create unique warning name
 * OTH#00000 Update call to execute in ws_execute_rule
 * OTH#00000 Add tooling for testing the Rule Engine functions
 * OTH#00000 Fix crash when adding debug log if no rec_name defined on object
