--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10976 Création automatique d'un warning name unique lors d'ajout des warning dans le moteur de règle
 * OTH#00000 Mise à jour de l'appel à execute dans ws_execute_rule
 * OTH#00000 Ajout d'outillage de tests pour les noeuds du moteur de règles
 * OTH#00000 Correction d'une erreur lors de l'ajout d'un log de débuggage quand il n'y a pas de rec_name défini sur l'objet
