--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Correction de la méthode get_good_version_at_date sur  revisionmixin
+si le id du target_field est non défini
 * OTH#00000 Ajout de la méthode get_good_version_at_date sur revisionmixin
 * BUG#11845 Ajout de la base de donnée de la transaction dans la génération de taches asynchrones
 * FEA#11661 Ajout de resources dédiées aux APIs
