questionnaire: fix susbscription process start date from questionnaire wizard (#2983)
Fix #00000"

--- a/modules/questionnaire/doc/en/CHANGELOG
+++ b/modules/questionnaire/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix subscription process start date initialization from questionnaire wizard
 * FEA#11785 Backoffice questionnaire management, multipart questionnaires
 * BUG#11551 Rename Questionnaire entry point
 
