--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add effective date in sepa mandate list view
 * BUG#12141 Always set business_kind on reject fee
 * FEA#11160 Allow to force the use of the SMNDA flag for sepa messages through configuration
 * FEA#11094 Allow to have a single snapshot for the cancel moves of all payments failed by the same CAMT054 file
