--- a/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Ajout de la date d'effet dans la vue liste des mandats
 * BUG#12141 Toujours renseigner le type métier sur les frais de rejets
 * FEA#11160 Permettre de forcer l'usage de la balise SMNDA pour les messages SEPA via la configuration du journal de paiement
 * FEA#11094 Permettre d'avoir un seul agrégat comptable pour les mouvements d'annulation de tous les paiements échoués par le même fichier CAMT054
