--- a/modules/contract_coverage_amount/doc/en/CHANGELOG
+++ b/modules/contract_coverage_amount/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12260 Manage coverage amount in subscription APIs
 * FEA#11626 Add default coverage amount rule based on amount range 
 
 Version 2.4 - 2019-04-12
