contract_insurance_invoice: Check contract on move line (#2991)
Fix #12257

--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12257 Vérification de l'existence d'un contrat sur la ligne comptable (suite de 8f10fb735)
 * FEA#11728 Ajout de tests sur le quittancement dynamique
 * OTH#00000 Correction de la génération de la documentation sur un produit suite à FEA11728
 * BUG#12026 Correction de l'assistant de lettrage : perte et profits n'est pas toujours requis
