--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12257 Properly check for a contract on the move line (following 8f10fb735)
 * FEA#11728 Add tests on dynamic billing modes
 * OTH#00000 Fix product documentation following FEA11728
 * BUG#12026 Fix reconciliation wizard : write off is not always required
