contract_insurance_invoice:invoice whole term (#2979)
Fix #12228

--- a/modules/contract_insurance_invoice/locale/fr.po
+++ b/modules/contract_insurance_invoice/locale/fr.po
@@ -81,8 +81,8 @@ msgid "Create Non Periodic Invoices"
 msgstr "Créer les quittances non périodiques"
 
 msgctxt "error:offered.billing_mode:"
-msgid "The code must be unique"
-msgstr "Le code doit être unique"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
 
 msgctxt "error:offered.product.billing_rule:"
 msgid "The return value of the rule must be a dictionnary."
@@ -1012,6 +1012,10 @@ msgctxt ""
 msgid "Match Contract Frequency"
 msgstr "Synchroniser avec la fréquence du contrat"
 
+msgctxt "field:offered.product,billing_behavior:"
+msgid "Billing Behavior"
+msgstr "Stratégie de quittancement"
+
 msgctxt "field:offered.product,billing_rules:"
 msgid "Billing Rules"
 msgstr "Règle de Modes de quittancement"
@@ -1071,6 +1075,10 @@ msgstr "Mis à jour par"
 msgctxt "field:offered.product-offered.billing_mode,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
+
+msgctxt "field:offered.product.billing_rule,billing_behavior:"
+msgid "Billing Behavior"
+msgstr "Stratégie de quittancement"
 
 msgctxt "field:offered.product.billing_rule,billing_modes:"
 msgid "Billing Modes"
@@ -1214,6 +1222,19 @@ msgstr ""
 "Une liste de nombres séparés par des virgules correspondant aux jours disponibles pour le prélèvement.\n"
 "Une liste vide signifie que tous les jours sont autorisés."
 
+msgctxt "help:offered.billing_mode,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
+msgctxt "help:offered.billing_mode,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
 msgctxt "help:offered.configuration,prorate_premiums:"
 msgid ""
 "If checked, the invoiced amount for a given period is the premium prorated "
@@ -1248,6 +1269,10 @@ msgid "Taxes Included In Premium. Requires tax rounding to be set to\"line\""
 msgstr ""
 "Taxes incluses dans le tarif. L'arrondi des taxes doit être configuré par "
 "ligne"
+
+msgctxt "help:offered.product.billing_rule,billing_behavior:"
+msgid "Defines invoicing strategy for this product"
+msgstr "Définit la stratégie de quittancement de ce produit"
 
 msgctxt "help:offered.product.billing_rule,billing_modes:"
 msgid "Billing mode available to invoice the contract"
@@ -1589,6 +1614,14 @@ msgstr "Octobre"
 msgctxt "selection:offered.billing_mode,sync_month:"
 msgid "September"
 msgstr "Septembre"
+
+msgctxt "selection:offered.product.billing_rule,billing_behavior:"
+msgid "Invoice until requested period"
+msgstr "Quittancer jusque la période demandée"
+
+msgctxt "selection:offered.product.billing_rule,billing_behavior:"
+msgid "Invoice whole term"
+msgstr "Quittancer tout le terme"
 
 msgctxt "selection:rule_engine,type_:"
 msgid "Billing Mode"
