endorsement_party_health_fr: Fix health complement endorsement (#2988)
Fix #00000

--- a/modules/endorsement_party_health_fr/doc/fr/CHANGELOG
+++ b/modules/endorsement_party_health_fr/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Correction de l'avenant de modification des données de régime obligatoire
+
 Version 2.4 - 2019-04-12
 * BUG#10180 Correction d'une perte de données lors de la modification du régime
 
