--- a/modules/endorsement_party_health_fr/doc/en/CHANGELOG
+++ b/modules/endorsement_party_health_fr/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Fix health complement endorsement
+
 Version 2.4 - 2019-04-12
 * BUG#10180 Fix a data loss problem when modifying the healthcare system
 
