third_party_protocol_almerys: iteration on third party period management (#2995)
Fix #00000

--- a/modules/third_party_protocol_almerys/doc/en/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/en/CHANGELOG
@@ -1,4 +1,5 @@
 * OTH#00000 Iteration on FEA#11526
+* OTH#00000 Iteration on FEA#11526
 * OTH#00000: Updates on flux v3 file batch
 * FEA#11997: Almerys Return
 * OTH#00000: Remove space from selection field configuration
