--- a/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
+++ b/modules/third_party_protocol_almerys/doc/fr/CHANGELOG
@@ -1,4 +1,5 @@
 * OTH#00000 Itération sur FEA#11526
+* OTH#00000 Itération sur FEA#11526
 * OTH#00000: Itération sur le batch de génération du flux v3
 * FEA#11997: Gestion des retour almerys
 * OTH#00000: Suppression d'un espace erroné dans la configuration d'un champ sélection
