--- a/modules/questionnaire/doc/en/CHANGELOG
+++ b/modules/questionnaire/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12267 Questionnaire answers are readonly in questionnaire wizard
 * OTH#00000 Fix subscription process start date initialization from questionnaire wizard
 * FEA#11785 Backoffice questionnaire management, multipart questionnaires
 * BUG#11551 Rename Questionnaire entry point
