--- a/modules/questionnaire/doc/fr/CHANGELOG
+++ b/modules/questionnaire/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12267 L'écran de saisie des réponses de questionnaire apparait en lecture seul lors de la saisie des réponses dans Coog
 * OTH#00000 Corriger l'initialisation de la date d'effet du processus de souscription depuis un questionnaire
 * FEA#11785 Intégration des questionnaires de recueil de besoin lors du parcours de vente dans Coog
 * BUG#11551 Renommer le point d'entrée questionnaire
