--- a/modules/endorsement_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/endorsement_insurance_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12266 L'application d'un avenant de résiliation ne devrait déclencher un requittancement qu'à la date d'effet plus un jour
 * BUG#11726 Alimentations des payeurs possibles avenant de modification des paramètres de quittancement
 
 Version 2.4 - 2019-04-12
