--- a/modules/third_party_right_management/doc/en/CHANGELOG
+++ b/modules/third_party_right_management/doc/en/CHANGELOG
@@ -1,2 +1,3 @@
+* OTH#0000 Fix date overlap validation for third party periods
 * OTH#0000 Handle JSON export and import of third party protocols
 * FEA#11489: Module creation
