--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12278 Fix support personalized rate at 0
 * BUG#12042 Fix pasrau message generation to prevent duplicate lines
 * BUG#11421 Update the default pasrau rates in xml
 
@@ -16,7 +17,7 @@ Version 2.4 - 2019-04-12
 * BUG#10442: An error is raised when generating a pasrau message is generated after the 10 of the month. However the error must be raised only the 10th of the month after the pasrau slip invoice date
 * OTH#0000 Fix crash when generating empty pasrau message on no line pasrau slip
 * FEA#10394 handle matricule with party code in pasrau file
-* OTH#0000 Improve pasrau file import wizard and batch 
+* OTH#0000 Improve pasrau file import wizard and batch
 * FEA#10343 Include party modifications in pasrau dsn
 * FEA#10293 Handle pasrau rate business id and create a pasrau rate object linked to move lines
 * FEA#10156 Handle pasrau slips
