loan: Eligibility rules management  (#2955)
Fix #12047

--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12047 Eligibility rules management
 * FEA#12121 Allow to consider a bank as a lender
 * FEA#11952 Add an API for loan payment computations
 
