--- a/modules/loan/doc/fr/CHANGELOG
+++ b/modules/loan/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12047 Gestion de l'éligibilité par prêts
 * FEA#12121 Possibilité de considérer une banque comme organisme prêteur
 * FEA#11952 Ajout d'une API pour le calcul de l'échéancier des prêts
 
