--- a/modules/report_engine/locale/fr.po
+++ b/modules/report_engine/locale/fr.po
@@ -38,6 +38,10 @@ msgctxt "error:report.create:"
 msgid "Report is impossible: No contact available."
 msgstr "La génération du courrier est impossible: pas de contact disponible"
 
+msgctxt "error:report.shared_template:"
+msgid "The code must be unique!"
+msgstr "Le code doit être unique !"
+
 msgctxt "error:report.template.parameter:"
 msgid "Invalid domain in schema \"%(schema)s\"."
 msgstr "Domaine non valide dans le schéma « %(schema)s »."
@@ -95,6 +99,10 @@ msgid "Pdf"
 msgstr "Pdf"
 
 msgctxt "error:report.template:"
+msgid "Shared Genshi Template"
+msgstr "Modèle Genshi partagé"
+
+msgctxt "error:report.template:"
 msgid "The document template code must be unique"
 msgstr "Le code du modèle de courrier doit être unique"
 
@@ -105,6 +113,10 @@ msgid ""
 msgstr ""
 "Vos documents ont été produits:\n"
 "%(reports)s"
+
+msgctxt "field:event.type.action,at_commit:"
+msgid "At The Last Moment"
+msgstr "Au dernier moment"
 
 msgctxt "field:event.type.action,report_templates:"
 msgid "Report Templates"
@@ -293,6 +305,50 @@ msgstr "Modèle"
 msgctxt "field:report.generate.period,id:"
 msgid "ID"
 msgstr "Identifiant"
+
+msgctxt "field:report.shared_template,code:"
+msgid "Code"
+msgstr "Code"
+
+msgctxt "field:report.shared_template,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:report.shared_template,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:report.shared_template,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:report.shared_template,data:"
+msgid "Data"
+msgstr "Données"
+
+msgctxt "field:report.shared_template,id:"
+msgid "ID"
+msgstr "Identifiant"
+
+msgctxt "field:report.shared_template,name:"
+msgid "Name"
+msgstr "Numéro"
+
+msgctxt "field:report.shared_template,rec_name:"
+msgid "Record Name"
+msgstr "Numéro"
+
+msgctxt "field:report.shared_template,write_date:"
+msgid "Write Date"
+msgstr "Modifié par"
+
+msgctxt "field:report.shared_template,write_uid:"
+msgid "Write User"
+msgstr "Modifié par"
+
+msgctxt "field:report.shared_template,xml_id:"
+msgid "XML Id"
+msgstr "XML Id"
 
 msgctxt "field:report.template,code:"
 msgid "Code"
@@ -610,6 +666,10 @@ msgctxt "field:report.template.version,id:"
 msgid "ID"
 msgstr "ID"
 
+msgctxt "field:report.template.version,is_shared_template:"
+msgid "Is Shared Template"
+msgstr "Modèle partagé"
+
 msgctxt "field:report.template.version,language:"
 msgid "Language"
 msgstr "Langues"
@@ -625,6 +685,10 @@ msgstr "Chemin"
 msgctxt "field:report.template.version,rec_name:"
 msgid "Record Name"
 msgstr "Nom"
+
+msgctxt "field:report.template.version,shared_template:"
+msgid "Shared Template"
+msgstr "Modèles partagés"
 
 msgctxt "field:report.template.version,start_date:"
 msgid "Start date"
@@ -726,6 +790,35 @@ msgctxt "field:res.group,report_templates:"
 msgid "Report Templates"
 msgstr "Modèles de courrier"
 
+msgctxt "help:event.type.action,at_commit:"
+msgid ""
+"If set, this ensure the action will be executed at the last moment and that "
+"everything has been executed correctly before processing this action. This "
+"could be usefull for report generation and avoid documents to be sent "
+"whereas something went wrong during processing."
+msgstr ""
+"Si coché, assure que l'action sera executée au dernier moment et que tout ce"
+" qui précède à bien été executé correctement. Cela peut être utile lors de "
+"la génération des documents et éviter leur envoi si quelque chose s'est mal "
+"déroulé au préalable."
+
+msgctxt "help:report.shared_template,code:"
+msgid ""
+"The string that will be used to identify this record across the "
+"configuration. It should not be modified without checking first if it is "
+"used somewhere"
+msgstr ""
+"L'identifiant pour cet enregistrement dans la configuration. Il ne doit pas "
+"être modifié sans s'assurer au préalable des endroits y faisant référence"
+
+msgctxt "help:report.shared_template,data:"
+msgid "upload an xml file"
+msgstr "télécharger un fichier XML"
+
+msgctxt "help:report.shared_template,name:"
+msgid "The name that will be displayed to the end user"
+msgstr "Nom qui sera affiché à l'utilisateur"
+
 msgctxt "help:report.template,export_dir:"
 msgid "Store a copy of each generated document in specified server directory"
 msgstr ""
@@ -783,7 +876,7 @@ msgstr ""
 "document sera produit pour plusieurs objets."
 
 msgctxt "help:report.template,tags:"
-msgid "Configuration object tags list. Allows searching for all configuration objects related to a tag."
+msgid "Add and search all related configuration objects based on a tag"
 msgstr ""
 "Liste des labels sur l'objet de configuration. Permet ensuite de rechercher "
 "l'ensemble des objets de configuration liés à un même label."
@@ -819,6 +912,10 @@ msgstr "Paramètres de courrier"
 msgctxt "model:ir.action,name:act_report_template_print_unbound"
 msgid "Print Unbound Report"
 msgstr "Imprimer un document global"
+
+msgctxt "model:ir.action,name:act_shared_template"
+msgid "Shared Templates"
+msgstr "Modèles partagés"
 
 msgctxt "model:ir.action,name:act_treat_report_production_request"
 msgid "Treat Report Production Request"
@@ -856,6 +953,10 @@ msgctxt "model:ir.ui.menu,name:menu_report_production_requests"
 msgid "Report Production Requests"
 msgstr "Demandes de production de document"
 
+msgctxt "model:ir.ui.menu,name:menu_shared_template"
+msgid "Shared Templates"
+msgstr "Modèles partagés"
+
 msgctxt "model:ir.ui.menu,name:menu_template_parameter"
 msgid "Template Parameters"
 msgstr "Paramètres de courrier"
@@ -883,6 +984,10 @@ msgstr "Sélection du modèle"
 msgctxt "model:report.generate.period,name:"
 msgid "Generate Letter Period"
 msgstr "Générer le rapport annuel"
+
+msgctxt "model:report.shared_template,name:"
+msgid "Report Shared Template"
+msgstr "Modèle de rapport partagé"
 
 msgctxt "model:report.template,name:"
 msgid "Report Template"
