--- a/modules/claim/doc/fr/CHANGELOG
+++ b/modules/claim/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#12282 Gestion du compte bancaire sinistre dans les APIs
 * FEA#11832 Identifier au niveau du tiers le compte bancaire à utiliser pour les remboursements de prestations
 * BUG#11471 Correction du Method Resolution Order de l'objet claim
 
