--- a/modules/bank_fr/doc/en/CHANGELOG
+++ b/modules/bank_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12296 Export get bank from iban api
 * FEA#11795 Load banks and agencies from Banque de France files
 
 Version 2.4 - 2019-04-12
