contract_noemie: handle noemie during endorsement (#3013)
Fix #11778

--- a/modules/contract_noemie/doc/fr/CHANGELOG
+++ b/modules/contract_noemie/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11778 Fix Noemie status management for endorsements
 * FEA#11778 Ajout test
 * OTH#0000 Ajout de la chaîne de batch
 * FEA#11778 gestion du statut de noémisation
