--- a/modules/contract_noemie/doc/en/CHANGELOG
+++ b/modules/contract_noemie/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11778 Fix Noemie status management for endorsements
 * FEA#11778 Add test
 * OTH#0000 Add batch chain
 * FEA#11778 Noemie status management
