third_party_right_management: fix period management for endorsements (#3014)
Fix #00000

--- a/modules/third_party_right_management/doc/en/CHANGELOG
+++ b/modules/third_party_right_management/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Fix period management for endorsements
 * OTH#0000 Fix date overlap validation for third party periods
 * OTH#0000 Handle JSON export and import of third party protocols
 * FEA#11489: Module creation
